--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.0.1",
   "description": "A node express autofaucet api for dash powered by evolution / platform.",
   "main": "index.js",
-  "dependencies": {},
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/dashameter/dash-dapp-autofaucet/issues"
   },
-  "homepage": "https://github.com/dashameter/dash-dapp-autofaucet#readme"
+  "homepage": "https://github.com/dashameter/dash-dapp-autofaucet#readme",
+  "dependencies": {
+  "cors": "^2.8.5",
+  "dash": "^3.14.1",
+  "express": "^4.17.1"
 }
