feat: use env vars for clientOpts

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "evolution"
   ],
   "author": "dashameter",
+  "contributors": [
+    { "name" : "cloudwheels"}
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/dashameter/dash-dapp-autofaucet/issues"
